# reserch_work_last_term

./: .gitignore  README.md  docker-compose.yaml  index.html  init.sql  mongo-init.js  nginx.conf
 terms_glossary/: Dockerfile  index.html  postcss.config.js  run-stop-prod.sh  tailwind.config.js
 terms_glossary/src/: Root.tsx
 terms_glossary/src/components/glossary/: index.ts
 terms_glossary/src/components/header/: index.ts
 terms_glossary/src/components/mind-map/: index.ts
 terms_glossary/src/layout/: LayoutDefault.tsx
 terms_glossary/src/pages/: HomePage.tsx
.github/workflows/: main.yml
java-script/async_version/: Dockerfile  Processor.js  app.js  package-lock.json  package.json
java-script/sync_version/: Dockerfile  Processor.js  app.js  package-lock.json  package.json
javascript/async_version/: Dockerfile  Processor.js
javascript/express_app/: Dockerfile  app.js  app_workers.js  package-lock.json  package.json
javascript/express_app/models/: mongoUser.js  pgUser.js
javascript/sync_version/: Processor.js  eslint-config.json
python/: async_version.py  sync_version.py
python/async_version/: Dockerfile  env_vars.sh  pyproject.toml  setup.cfg
python/async_version/server/: __main__.py  logger.py  logic.py  main.py
python/fastapi_app/: Dockerfile  database.py  main.py  main_asyncpg.py  models.py  pyproject.toml
python/fastapi_app/scripts/: get_versions.py  mongo_fill.py  mongo_get_collections.py  mongo_get_objects.py  script_create_users.py
python/sync_version/: Dockerfile  pyproject.toml  setup.cfg
python/sync_version/server/: __main__.py  constants.py  logger.py  logic.py  main.py
scripts/javascript/async_version/: memory_checker.js  package-lock.json  time_checker.js
scripts/javascript/sync_version/: memory_checker.js  package-lock.json  package.json  time_checker.js
scripts/python/async_version/: memory_checker.py  time_checker.py
scripts/python/sync_version/: memory_checker.py  time_checker.py
terms_glossary/: .eslintrc  Dockerfile  README.md  index.html  package.json  run-prod.sh  tailwind.config.js  tsconfig.json  vite.config.ts
terms_glossary/src/: main.tsx
terms_glossary/src/assets/styles/: index.css
terms_glossary/src/data/: index.json
terms_glossary/src/pages/: ErrorPage.tsx  MindMapView.tsx
terms_glossary/src/router/: index.tsx
terms_glossary/src/utils/: index.ts
(+11 files in other folders)
