[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = ""
authors = ["Mikhail Sokolov <mi.sokolov@innopolis.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = "^0.111.0"
psycopg2-binary = "2.9.9"
mongoengine = "^0.28.2"
pymongo = "^4.7.2"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.30"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
motor = "^3.4.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
py_version=310
profile="black"
line_length = 79
